--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,12 @@
         "module": "commonjs",
         "moduleResolution": "node",
         "baseUrl": "./",
-        "lib": ["es2019", "es2020.promise", "es2020.bigint", "es2020.string"],
+        "lib": [
+            "es2019",
+            "es2020.promise",
+            "es2020.bigint",
+            "es2020.string"
+        ],
         "outDir": "./dist",
         "strict": true,
         "sourceMap": true,
@@ -12,6 +17,7 @@
         "removeComments": true,
         "noUnusedLocals": true,
         "noUnusedParameters": true,
+        "esModuleInterop": true
     },
     "include": [
         "./src/**/*"
