--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
   "dependencies": {
     "express": "^4.17.1",
     "joi": "^17.3.0",
-    "typescript": "^4.0.5"
+    "typescript": "^4.0.5",
+    "validate.js": "^0.13.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.8",
