--- a/package.json
+++ b/package.json
@@ -18,13 +18,15 @@
   },
   "homepage": "https://github.com/GaborGyorgy/mg-data-validator-poc#readme",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "joi": "^17.3.0",
+    "ts-node-dev": "^1.0.0",
     "typescript": "^4.0.5"
   },
   "devDependencies": {
     "@types/express": "^4.17.8",
-    "@types/node": "^14.14.5",
-    "ts-node": "^9.0.0"
+    "@types/joi": "^14.3.4",
+    "@types/node": "^14.14.5"
   }
 }
