--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "express": "^4.17.1",
     "joi": "^17.3.0",
     "typescript": "^4.0.5",
-    "validate.js": "^0.13.1"
+    "validatorjs": "^3.20.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.8",
