--- a/package.json
+++ b/package.json
@@ -20,8 +20,7 @@
   "dependencies": {
     "express": "^4.17.1",
     "joi": "^17.3.0",
-    "typescript": "^4.0.5",
-    "validatorjs": "^3.20.0"
+    "typescript": "^4.0.5"
   },
   "devDependencies": {
     "@types/express": "^4.17.8",
